@@ -2,6 +2,8 @@
 
 * Mentioned the three supported platforms and what's necessary to build RedCloth in the README file.
 
+* Fixed a require problem that caused an error when you would gem check --test RedCloth. #91
+
 === 4.1.1 / November 19, 2008
 
 * Added 'lib/case_sensitive_require' back into gemspec.  It got left out in the conversion to echoe, so "require 'RedCloth'" didn't work. #88
